--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": false,
-"NamaBot":" ī.ᴀᴍ/ꪶ͢ᴍ44ʟᴜᴛᴛʏꫂ⁩⁴⁰⁴",
-"NomorOwner":"917025868709",
-"NamaOwner":"ī.ᴀᴍ/ꪶ͢ʜᴜ5ɴɪ53ʀꫂ⁩⁴⁰⁴",
+"NamaBot":" Amiya",
+"NomorOwner":"94767453646",
+"NamaOwner":"Amiya",
 "HunterApi":"Ikyy69"
 }
